--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pretty": "prettier --write ."
   },
   "dependencies": {
+    "faunadb": "^4.8.0",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
