--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pretty": "prettier --write ."
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.52.1",
     "axios": "^1.3.5",
     "faunadb": "^4.8.0",
     "next": "13.2.4",
