--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pretty": "prettier --write ."
+    "pretty": "prettier --write .",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^6.7.3",
+    "@prismicio/helpers": "^2.3.9",
+    "@prismicio/next": "^1.1.0",
+    "@prismicio/react": "^2.6.0",
     "@stripe/stripe-js": "^1.52.1",
     "axios": "^1.3.5",
     "faunadb": "^4.8.0",
@@ -22,12 +27,15 @@
     "stripe": "^11.16.0"
   },
   "devDependencies": {
+    "@prismicio/types": "^0.2.7",
+    "@slicemachine/adapter-next": "^0.1.3",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "prettier": "^2.8.4",
+    "slice-machine-ui": "^1.0.3",
     "typescript": "5.0.2"
   }
 }
