--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "faunadb": "^4.8.0",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
@@ -30,6 +31,7 @@
     "@prismicio/types": "^0.2.7",
     "@slicemachine/adapter-next": "^0.1.3",
     "@types/node": "18.15.3",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
