--- a/package.json
+++ b/package.json
@@ -30,17 +30,23 @@
   "devDependencies": {
     "@prismicio/types": "^0.2.7",
     "@slicemachine/adapter-next": "^0.1.3",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "18.15.3",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "babel-jest": "^29.7.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "jest": "^29.7.0",
+    "jest-dom": "^4.0.0",
     "prettier": "^2.8.4",
     "slice-machine-ui": "^1.0.3",
     "typescript": "5.0.2"
