--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "pretty": "prettier --write .",
+    "test": "jest",
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
@@ -33,6 +34,7 @@
     "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
     "@types/node": "20.6.2",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "18.2.21",
@@ -47,6 +49,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.7.0",
     "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
     "slice-machine-ui": "^1.0.3",
     "typescript": "5.2.2"
