--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest": "^29.7.0",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock": "^29.7.0",
     "prettier": "^3.0.3",
     "slice-machine-ui": "^1.0.3",
     "typescript": "5.2.2"
