--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "autoprefixer": "^10.4.16",
     "babel-jest": "^29.7.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.2.4",
@@ -52,8 +53,10 @@
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock": "^29.7.0",
+    "postcss": "^8.4.30",
     "prettier": "^3.0.3",
     "slice-machine-ui": "^1.0.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
   }
 }
