--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jest-mock": "^29.7.0",
     "postcss": "^8.4.30",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "slice-machine-ui": "^1.0.3",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
